<resources>
    <string name="app_name">MyApplication</string>
    <string name="ok">ok</string>
    <string name="delete">delete</string>
    <string name="load_from_placeholder_service">Load from Placeholder service</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigate_to_2">Navigate to 2</string>
    <string name="navigate_to_3">Navigate to fragment 3</string>
    <string name="navigate_to_settings">Navigate to settings</string>
    <string name="download">Download</string>
    <string name="setup_snackbar_for_first_name">Show snackbar/toast for first name change</string>
</resources>
